--- a/src/main/resources/assets/vaultpatcher/lang/zh_cn.json
+++ b/src/main/resources/assets/vaultpatcher/lang/zh_cn.json
@@ -1,6 +1,8 @@
 {
   "commands.vaultpatcher.export.tips.success": "完成！导出到langpatcher.json",
-  "commands.vaultpatcher.export.warning.wip": "警告：此功能仍是*WIP*！",
-  "commands.vaultpatcher.list.warning.wip": "警告：此功能仍是*WIP*！",
-  "commands.vaultpatcher.list.tips.modslist": "以下为已加载的模块列表："
+  "commands.vaultpatcher.list.tips.modslist": "以下为已加载的模块列表：",
+  "commands.vaultpatcher.list.tips.authors": "作者：%s",
+  "commands.vaultpatcher.list.tips.name": "名称：%s",
+  "commands.vaultpatcher.list.tips.desc": "描述：%s",
+  "commands.vaultpatcher.list.tips.mods": "模组：%s"
 }
