--- a/src/main/resources/assets/vaultpatcher/lang/en_us.json
+++ b/src/main/resources/assets/vaultpatcher/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "commands.vaultpatcher.export.tips.success": "Done! Export to langpatcher.json",
-  "commands.vaultpatcher.export.warning.wip": "Warning: This feature is still *WIP*!",
-  "commands.vaultpatcher.list.warning.wip": "Warning: This feature is still *WIP*!",
-  "commands.vaultpatcher.list.tips.modslist": "The following is a list of loaded modules: "
+  "commands.vaultpatcher.list.tips.modslist": "The following is a list of loaded modules: ",
+  "commands.vaultpatcher.list.tips.authors": "Authors: %s",
+  "commands.vaultpatcher.list.tips.name": "Name: %s",
+  "commands.vaultpatcher.list.tips.desc": "Description: %s",
+  "commands.vaultpatcher.list.tips.mods": "Applied Mods: %s"
 }
