--- a/src/main/resources/assets/vaultpatcher/lang/zh_tw.json
+++ b/src/main/resources/assets/vaultpatcher/lang/zh_tw.json
@@ -1,6 +1,8 @@
 {
   "commands.vaultpatcher.export.tips.success": "完成！導出到langpatcher.json",
-  "commands.vaultpatcher.export.warning.wip": "警告：此功能仍是*WIP*！",
-  "commands.vaultpatcher.list.warning.wip": "警告：此功能仍是*WIP*！",
-  "commands.vaultpatcher.list.tips.modslist": "以下為已加載的模塊列表："
+  "commands.vaultpatcher.list.tips.modslist": "以下為已加載的模塊列表：",
+  "commands.vaultpatcher.list.tips.authors": "作者：%s",
+  "commands.vaultpatcher.list.tips.name": "名稱：%s",
+  "commands.vaultpatcher.list.tips.desc": "描述：%s",
+  "commands.vaultpatcher.list.tips.mods": "模組：%s"
 }
