--- a/src/main/resources/assets/vaultpatcher/lang/en_us.json
+++ b/src/main/resources/assets/vaultpatcher/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "commands.vaultpatcher.export.tips.success": "Done! Export to langpatcher.json",
+  "commands.vaultpatcher.export.tips.disabled": "Error! Export feature is disabled",
   "commands.vaultpatcher.list.tips.modslist": "The following is a list of loaded modules: ",
   "commands.vaultpatcher.list.tips.authors": "Authors: %s",
   "commands.vaultpatcher.list.tips.name": "Name: %s",
