--- a/src/main/resources/assets/vaultpatcher/lang/zh_cn.json
+++ b/src/main/resources/assets/vaultpatcher/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "commands.vaultpatcher.export.tips.success": "完成！导出到langpatcher.json",
+  "commands.vaultpatcher.export.tips.disabled": "错误！导出功能已被禁用",
   "commands.vaultpatcher.list.tips.modslist": "以下为已加载的模块列表：",
   "commands.vaultpatcher.list.tips.authors": "作者：%s",
   "commands.vaultpatcher.list.tips.name": "名称：%s",
